--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="style/style.css">
+
     <title>Brackts</title>
 </head>
 <body>
     
+    <main>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="text-center profile">
+                        <img src="img/perfilfundo.png" alt="Profile" class="img-fluid">
+                        <h1 class="mt-3">Gustavo Mendes</h1>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+    </main>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
