--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -13,58 +13,35 @@
 
     <link rel="stylesheet" href="/style/style.css">
 
-    <title>Inicio - Brackts</title>
+    <title>Inicio - Brackets</title>
 </head>
 
 <body>
 
-    <main>
+    <main class="index">
+        <div class="section-logo">
+            <img src="/img/logo.png" alt="Logo Brackets">
+        </div>
 
-        <section class="vertical-center ">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
+        <div class="login">
 
-                        <div class="col-md-4">
+        </div>
+    </main>
 
-                        </div>
-
-
-
-                        <div class="text-center profile">
-                            <img src="/img/paula.png" alt="Profile" class="img-fluid">
-                            <h1 class="mt-3"><strong>Olá,</strong> Paula Cardoso</h1>
-
-
-                            <div class="text-start mt-3 sec text-center">
-                                <p> Iremos te ajudar a ter a sua viagem dos sonhos,
-                                    Preencha os campos a seguir para podermos te ajudar</p>
-                            </div>
-
-                            <div class="text-center tes">
-                                <a href="/components/question.html">
-                                    <button class="btn btn-primary">
-                                        Próximo
-                                    </button>
-                                </a>
-                            </div>
-                        </div>
-
+    <footer class="mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="nav text-center nav">
+                        <h6>Brackets</h6>
+                        <p>Todos os direitos reservados ©2021</p>
                     </div>
                 </div>
             </div>
-        </section>
-
-    </main>
-
-    <section>
-
-    </section>
+        </div>
+    </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
