:bug: tela inicial

--- a/index.html
+++ b/index.html
@@ -14,32 +14,38 @@
     <link rel="stylesheet" href="/style/style.css">
 
     <title>Inicio - Brackets</title>
+
+
+
+        
+
 </head>
 
 <body>
 
-    <main class="index">
-        <div class="section-logo">
-            <img src="/img/logo.png" alt="Logo Brackets">
-        </div>
 
-        <div class="login">
 
-        </div>
-    </main>
-
-    <footer class="mt-5">
-        <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="nav text-center nav">
-                        <h6>Brackets</h6>
-                        <p>Todos os direitos reservados ©2021</p>
+                <div class="col-md-6  text-center op">
+                    <div class="d-block alert-heading hg">
+                        <img src="/img/logo.png" alt="Logo Brackets" class="se">
+                        <h3 class="orange ">BRACKETS</h3>
+                        <h3 class="orange ">JUNTANDO SORRISOS</h3>
+                    </div>
+
+                </div>
+                <div class="col-md-6 gradient   text-center op">
+                    <div>
+                        
+                        <h1 class="text-center tes">SEJA BEM VINDO</h1>
+                        <a href="/components/feed.html">
+                            <button class="btn btn-primary mt-2 tes">
+                                ENTRAR
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
 
 
 </body>
