--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="d-block alert-heading hg">
                         <img src="/img/logo.png" alt="Logo Brackets" class="se">
                         <h3 class="orange ">BRACKETS</h3>
-                        <h3 class="orange ">JUNTANDO SORRISOS</h3>
+                        <h3 class="orange ">CONECTANDO SORRISOS</h3>
                     </div>
 
                 </div>
