--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-        
+
 
 </head>
 
@@ -25,27 +25,25 @@
 
 
 
-            <div class="row">
-                <div class="col-md-6  text-center op">
-                    <div class="d-block alert-heading hg">
-                        <img src="/img/logo.png" alt="Logo Brackets" class="se">
-                        <h3 class="orange ">BRACKETS</h3>
-                        <h3 class="orange ">CONECTANDO SORRISOS</h3>
-                    </div>
-
-                </div>
-                <div class="col-md-6 gradient   text-center op">
-                    <div>
-                        
-                        <h1 class="text-center tes">SEJA BEM VINDO</h1>
-                        <a href="/components/feed.html">
-                            <button class="btn btn-primary mt-2 tes">
-                                ENTRAR
-                            </button>
-                        </a>
-                    </div>
-                </div>
+    <div class="row">
+        <div class="col-md-6  text-center op">
+            <div class="d-block alert-heading hg">
+                <img src="/img/main_logo.png" alt="Logo Brackets" class="se">
             </div>
+
+        </div>
+        <div class="col-md-6 gradient   text-center op">
+            <div>
+
+                <h1 class="text-center tes">SEJA BEM VINDO</h1>
+                <a href="/components/feed.html">
+                    <button class="btn btn-primary mt-2 tes">
+                        ENTRAR
+                    </button>
+                </a>
+            </div>
+        </div>
+    </div>
 
 
 </body>
